🎉 Rebrand to ExaCode: Update app name, expand questions to 240, add Python category
Major Changes:
- Changed app name from 'Exam Master' to 'ExaCode' across all files
- Updated Android package from com.exammaster.quizapp to com.waelalmomani.exacode
- Expanded question bank from 160 to 240 questions (30 per difficulty level)
- Replaced General Programming category with Python
- All questions now focus on logic and advanced concepts
- Implemented question randomization via shuffle() for unique exam sessions

Question Distribution:
- SQL: 60 questions (30 Easy + 30 Hard)
- Flutter: 60 questions (30 Easy + 30 Hard) - Widget logic focused
- Dart: 60 questions (30 Easy + 30 Hard)
- Python: 60 questions (30 Easy + 30 Hard)

Files Updated:
- Constants: questionsPerExam = 30, categories updated
- All screens: Updated to reflect ExaCode branding
- README: Created concise professional documentation
- LICENSE: Added MIT License
- PRIVACY_POLICY: Updated for ExaCode
- Android/iOS configs: Package name and app labels
- Icons: Generated for all platforms
- Tests: Added basic widget tests

Technical:
- 0 compilation errors (flutter analyze passed)
- All tests passing
- Clean Architecture maintained
- Hive database for offline storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: simple_quiz_app_2
-description: "Exam Master - Comprehensive quiz app for learning SQL, Flutter, Dart, and Programming with 160+ questions."
+description: "ExaCode - Advanced programming quiz app for mastering SQL, Flutter, Dart, and Python with 240 challenging questions."
 publish_to: 'none'
 
 # The following defines the version and build number for your application.
@@ -76,7 +76,7 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icon/app_icon.png"
   adaptive_icon_background: "#6200EA"
-  adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
+  adaptive_icon_foreground: "assets/icon/app_icon.png"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
